fix overflow issue

--- a/src/components/Layout/style.scss
+++ b/src/components/Layout/style.scss
@@ -3,4 +3,5 @@
 .layout {
   background-color: $white;
   position: relative;
+  overflow: hidden;
 }
